# cookiecutter-nussl

./: .gitignore  LICENSE  README.md  cookiecutter.json
docs/: conf.py  (+15 more)
{{cookiecutter.repo_name}}/: .coveragerc  .gitignore  Dockerfile  Makefile  docker_requirements.txt  pyproject.toml  redis.conf  requirements.txt  settings.py  supervisord.conf
{{cookiecutter.repo_name}}/cookiecutter_repo/: __init__.py  logger.py
{{cookiecutter.repo_name}}/data_prep/: data.py  download_toy_data.yml  incoherent.yml  resample.yml
{{cookiecutter.repo_name}}/experiments/: effect_of_bidirectional.py  musdb_dpcl.yml  music_dpcl.yml  speech_commands.yml  speech_dpcl.yml  train.yml  wham_dpcl.yml
{{cookiecutter.repo_name}}/notebooks/: analysis.ipynb  example.ipynb  yaml.ipynb
{{cookiecutter.repo_name}}/runners/: __init__.py  config.py  docker_runner.py  experiment_runner.py  experiment_runner_pool.py  experiment_utils.py  run_in_docker.py  script_runner_pool.py  utils.py
{{cookiecutter.repo_name}}/scripts/: __init__.py  analyze.py  data.py  dispatch.py  download_toy_data.py  downsample.py  evaluate.py  mix_with_scaper.py  parse_yaml.py  pipeline.py  prepare_urbansound.py  reorganize.py  resample.py  run.py  run_in_docker.py  setup_experiment.py  sweep_experiment.py  train.py  visualize.py
{{cookiecutter.repo_name}}/setup/: build_docker_image.sh  install_docker.sh
{{cookiecutter.repo_name}}/src/: __init__.py
{{cookiecutter.repo_name}}/tests/: __init__.py  test_data.py  test_experiment.py  test_experiment_utils.py  test_import.py  test_pipeline.py  test_runners.py  test_yaml.py
(+204 files in other folders)
