[tool.poetry]
name = "cookiecutter_repo_name"
version = "0.1.0"
description = "Cookiecutter for experiments that use the nussl library."
authors = ["Prem Seetharaman"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.17"
scipy = "^1.3"
musdb = "^0.3.1"
museval = "^0.3.0"
librosa = "^0.7.1"
matplotlib = "^3.1"
pandas = "^0.25.3"
scikit-learn = "^0.21.3"
docker = "^4.1"
ffmpy = "^0.2.2"
comet_ml = "^2.0"
GPUtil = "^1.4"
gspread = "^3.1"
oauth2client = "^4.1"
pretty_midi = "^0.2.8"
numcodecs = "==0.6.2"
zarr = "==2.3.0"
torch = "^1.3"
vamp = { version = "^1.0.0", optional = true }
nussl = { git = "https://github.com/interactiveaudiolab/nussl.git", branch = "clustering" }
scaper = { git = "https://github.com/pseeth/scaper.git", branch = "master" }
pyyaml = "^5.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[tool.poetry.extras]
melodia = ["vamp"]
test = ["pytest"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"